# ComfyUI-Bagel

./: README.md  inferencer.py  nodes.py  pyproject.toml  requirements.txt
workflow/: Bagel.json
